# api/v1/models/update_user_request.go
@@ -1,0 +1,98 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// UpdateUserRequest update user request
+//
+// swagger:model UpdateUserRequest
+type UpdateUserRequest struct {
+
+	// The user's email.
+	// Format: email
+	Email strfmt.Email `json:"email,omitempty"`
+
+	// True if the End-User's e-mail address has been verified; otherwise false.
+	EmailVerified bool `json:"email_verified,omitempty"`
+
+	// Boolean representing if user is enabled or not.
+	Enabled bool `json:"enabled,omitempty"`
+
+	// Initial password for this user.
+	// Format: password
+	Password strfmt.Password `json:"password,omitempty"`
+
+	// Additional data related to the user
+	UserMetadata map[string]string `json:"user_metadata,omitempty"`
+}
+
+// Validate validates this update user request
+func (m *UpdateUserRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateEmail(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validatePassword(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *UpdateUserRequest) validateEmail(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Email) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("email", "body", "email", m.Email.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *UpdateUserRequest) validatePassword(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Password) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("password", "body", "password", m.Password.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *UpdateUserRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *UpdateUserRequest) UnmarshalBinary(b []byte) error {
+	var res UpdateUserRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
