# api/v1/openapi.yaml
@@ -268,6 +268,34 @@ paths:
           "$ref": "#/responses/TooManyRequests"
         default:
           "$ref": "#/responses/Unexpected"
+    put:
+      tags:
+        - users
+      operationId: update-user
+      summary: Update user
+      parameters:
+        - "$ref": "#/parameters/realm_id"
+        - "$ref": "#/parameters/username"
+        - name: user
+          in: body
+          required: true
+          schema:
+            "$ref": "#/definitions/UpdateUserRequest"
+      responses:
+        200:
+          "$ref": "#/responses/OK"
+        400:
+          "$ref": "#/responses/BadRequest"
+        401:
+          "$ref": "#/responses/Unauthorized"
+        403:
+          "$ref": "#/responses/Forbidden"
+        404:
+          "$ref": "#/responses/NotFound"
+        429:
+          "$ref": "#/responses/TooManyRequests"
+        default:
+          "$ref": "#/responses/Unexpected"
     delete:
       tags:
         - users
@@ -522,6 +550,29 @@ definitions:
         description: Additional data related to the user
         additionalProperties:
           type: string
+  UpdateUserRequest:
+    type: object
+    properties:
+      password:
+        type: string
+        format: password
+        description: Initial password for this user.
+      enabled:
+        type: boolean
+        description: Boolean representing if user is enabled or not.
+      email:
+        type: string
+        format: email
+        description: The user's email.
+      email_verified:
+        type: boolean
+        description: True if the End-User's e-mail address has been verified; otherwise false.
+      user_metadata:
+        type: object
+        description: Additional data related to the user
+        additionalProperties:
+          type: string
+
   CreateUserResponse:
     type: object
     required:
