# api/v1/server/restapi/users/update_user_parameters.go
@@ -1,0 +1,128 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package users
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"io"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+
+	"github.com/grepplabs/tribe/api/v1/models"
+)
+
+// NewUpdateUserParams creates a new UpdateUserParams object
+// no default values defined in spec.
+func NewUpdateUserParams() UpdateUserParams {
+
+	return UpdateUserParams{}
+}
+
+// UpdateUserParams contains all the bound params for the update user operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters update-user
+type UpdateUserParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*Realm id.
+	  Required: true
+	  In: path
+	*/
+	RealmID string
+	/*
+	  Required: true
+	  In: body
+	*/
+	User *models.UpdateUserRequest
+	/*Username.
+	  Required: true
+	  In: path
+	*/
+	Username string
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewUpdateUserParams() beforehand.
+func (o *UpdateUserParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	rRealmID, rhkRealmID, _ := route.Params.GetOK("realm_id")
+	if err := o.bindRealmID(rRealmID, rhkRealmID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body models.UpdateUserRequest
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if err == io.EOF {
+				res = append(res, errors.Required("user", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("user", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.User = &body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("user", "body", ""))
+	}
+	rUsername, rhkUsername, _ := route.Params.GetOK("username")
+	if err := o.bindUsername(rUsername, rhkUsername, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindRealmID binds and validates parameter RealmID from path.
+func (o *UpdateUserParams) bindRealmID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	o.RealmID = raw
+
+	return nil
+}
+
+// bindUsername binds and validates parameter Username from path.
+func (o *UpdateUserParams) bindUsername(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	o.Username = raw
+
+	return nil
+}
