# api/v1/server/restapi/users/update_user_responses.go
@@ -1,0 +1,316 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package users
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/grepplabs/tribe/api/v1/models"
+)
+
+// UpdateUserOKCode is the HTTP code returned for type UpdateUserOK
+const UpdateUserOKCode int = 200
+
+/*UpdateUserOK Successfully created.
+
+swagger:response updateUserOK
+*/
+type UpdateUserOK struct {
+}
+
+// NewUpdateUserOK creates UpdateUserOK with default headers values
+func NewUpdateUserOK() *UpdateUserOK {
+
+	return &UpdateUserOK{}
+}
+
+// WriteResponse to the client
+func (o *UpdateUserOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(200)
+}
+
+// UpdateUserBadRequestCode is the HTTP code returned for type UpdateUserBadRequest
+const UpdateUserBadRequestCode int = 400
+
+/*UpdateUserBadRequest Invalid request body.
+
+swagger:response updateUserBadRequest
+*/
+type UpdateUserBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Problem `json:"body,omitempty"`
+}
+
+// NewUpdateUserBadRequest creates UpdateUserBadRequest with default headers values
+func NewUpdateUserBadRequest() *UpdateUserBadRequest {
+
+	return &UpdateUserBadRequest{}
+}
+
+// WithPayload adds the payload to the update user bad request response
+func (o *UpdateUserBadRequest) WithPayload(payload *models.Problem) *UpdateUserBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user bad request response
+func (o *UpdateUserBadRequest) SetPayload(payload *models.Problem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateUserUnauthorizedCode is the HTTP code returned for type UpdateUserUnauthorized
+const UpdateUserUnauthorizedCode int = 401
+
+/*UpdateUserUnauthorized Invalid token.
+
+swagger:response updateUserUnauthorized
+*/
+type UpdateUserUnauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Problem `json:"body,omitempty"`
+}
+
+// NewUpdateUserUnauthorized creates UpdateUserUnauthorized with default headers values
+func NewUpdateUserUnauthorized() *UpdateUserUnauthorized {
+
+	return &UpdateUserUnauthorized{}
+}
+
+// WithPayload adds the payload to the update user unauthorized response
+func (o *UpdateUserUnauthorized) WithPayload(payload *models.Problem) *UpdateUserUnauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user unauthorized response
+func (o *UpdateUserUnauthorized) SetPayload(payload *models.Problem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateUserForbiddenCode is the HTTP code returned for type UpdateUserForbidden
+const UpdateUserForbiddenCode int = 403
+
+/*UpdateUserForbidden Insufficient scope.
+
+swagger:response updateUserForbidden
+*/
+type UpdateUserForbidden struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Problem `json:"body,omitempty"`
+}
+
+// NewUpdateUserForbidden creates UpdateUserForbidden with default headers values
+func NewUpdateUserForbidden() *UpdateUserForbidden {
+
+	return &UpdateUserForbidden{}
+}
+
+// WithPayload adds the payload to the update user forbidden response
+func (o *UpdateUserForbidden) WithPayload(payload *models.Problem) *UpdateUserForbidden {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user forbidden response
+func (o *UpdateUserForbidden) SetPayload(payload *models.Problem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserForbidden) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(403)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateUserNotFoundCode is the HTTP code returned for type UpdateUserNotFound
+const UpdateUserNotFoundCode int = 404
+
+/*UpdateUserNotFound Not found.
+
+swagger:response updateUserNotFound
+*/
+type UpdateUserNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Problem `json:"body,omitempty"`
+}
+
+// NewUpdateUserNotFound creates UpdateUserNotFound with default headers values
+func NewUpdateUserNotFound() *UpdateUserNotFound {
+
+	return &UpdateUserNotFound{}
+}
+
+// WithPayload adds the payload to the update user not found response
+func (o *UpdateUserNotFound) WithPayload(payload *models.Problem) *UpdateUserNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user not found response
+func (o *UpdateUserNotFound) SetPayload(payload *models.Problem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateUserTooManyRequestsCode is the HTTP code returned for type UpdateUserTooManyRequests
+const UpdateUserTooManyRequestsCode int = 429
+
+/*UpdateUserTooManyRequests Rate limiting
+
+swagger:response updateUserTooManyRequests
+*/
+type UpdateUserTooManyRequests struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Problem `json:"body,omitempty"`
+}
+
+// NewUpdateUserTooManyRequests creates UpdateUserTooManyRequests with default headers values
+func NewUpdateUserTooManyRequests() *UpdateUserTooManyRequests {
+
+	return &UpdateUserTooManyRequests{}
+}
+
+// WithPayload adds the payload to the update user too many requests response
+func (o *UpdateUserTooManyRequests) WithPayload(payload *models.Problem) *UpdateUserTooManyRequests {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user too many requests response
+func (o *UpdateUserTooManyRequests) SetPayload(payload *models.Problem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserTooManyRequests) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(429)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*UpdateUserDefault Unexpected error
+
+swagger:response updateUserDefault
+*/
+type UpdateUserDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Problem `json:"body,omitempty"`
+}
+
+// NewUpdateUserDefault creates UpdateUserDefault with default headers values
+func NewUpdateUserDefault(code int) *UpdateUserDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &UpdateUserDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the update user default response
+func (o *UpdateUserDefault) WithStatusCode(code int) *UpdateUserDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the update user default response
+func (o *UpdateUserDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the update user default response
+func (o *UpdateUserDefault) WithPayload(payload *models.Problem) *UpdateUserDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update user default response
+func (o *UpdateUserDefault) SetPayload(payload *models.Problem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateUserDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
